# claude-startup-linter

./: .doccheck.json  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  app.py  pricing.json  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: demo_script.md  talk_track.md
examples/: agent_sdk_repo_reviewer.py  sample_pitch.md  strong_pitch.md
scripts/: run_demo.sh  run_eval.py
skills/startup-linter/: SKILL.md
startup_signal_lab/: __init__.py  anthropic_client.py  evals.py  growth.py  mcp_server.py  prompts.py  router.py  score.py  scoring_tools.py  slop_rules.json
tests/: test_scoring.py
