[project]
name = "claude-startup-signal-lab"
version = "0.1.0"
description = "Claude founder demo: value prop, model routing, evals, and MCP tools."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "streamlit>=1.41.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "mcp>=1.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
